--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -56,7 +56,7 @@ block content
           .detail
             .title #{service.title}
             .desc #{service.describe}
-          .arrow &gt;
+          .arrow
           .price ￥#{service.price}
     if user.promo
       .section.promo(style="display:none")
