--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -413,13 +413,18 @@ body
           font-size: 12px
       .price
         float: right
-        padding-right: 25px
+        padding-right: 32px
         line-height: 42px
         height: 42px
       .arrow
+        background-image: url("../img/arrow-right.png")
+        width: 10px
+        height: 18px
         position: absolute
         right: 20px
-        top: 12px
+        top: 15px
+        background-size: 10px 18px
+        background-repeat: no-repeat
       .promo
         border-left: 1px solid grey
         padding-left: 12px
