--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -685,6 +685,9 @@ body
     font-size: 20px
     text-align: center
     margin: 50px auto 10px auto
+  .add
+    position: relative
+    left: -14px
   .section
     background-color: #fff
     padding: 15px 30px
