--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -688,15 +688,18 @@ body
   .add
     position: relative
     left: -14px
+    padding: 5px 0
+  .promos,.account
+    padding-bottom: 10px
   .section
     background-color: #fff
-    padding: 15px 30px
+    padding: 0 30px
     margin-bottom: 40px
     .h2
       color: orange
       text-align: center
       font-size: 18px
-      margin-bottom: 10px
+      padding: 10px 0
     .row
       clearfix()
       border-bottom: 1px solid orange
@@ -884,4 +887,4 @@ body
       .promo
         padding: 0 15px
         font-size: 12px
-        text-align: left
+        text-align: center
