--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -894,3 +894,25 @@ body
         padding: 0 15px
         font-size: 12px
         text-align: center
+
+#contact
+  .title
+    padding-top:10px
+    height: 40px
+    line-height: 40px
+    text-align: center
+    font-size: 20px
+  .texts
+    font-size: 15px
+    width: 82%
+    margin: 23px auto 30px auto
+  .map
+    width: 100%
+    margin: 0 auto 45px auto
+    img
+      width: 100%
+      display: block
+  .button-wrap
+    padding-bottom: 40px
+    a
+      text-decoration: none
