--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1187,3 +1187,29 @@ body.openmenu {
   font-size: 12px;
   text-align: center;
 }
+#contact .title {
+  padding-top: 10px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 20px;
+}
+#contact .texts {
+  font-size: 15px;
+  width: 82%;
+  margin: 23px auto 30px auto;
+}
+#contact .map {
+  width: 100%;
+  margin: 0 auto 45px auto;
+}
+#contact .map img {
+  width: 100%;
+  display: block;
+}
+#contact .button-wrap {
+  padding-bottom: 40px;
+}
+#contact .button-wrap a {
+  text-decoration: none;
+}
