--- a/public/pages/tpl/preorder.jade
+++ b/public/pages/tpl/preorder.jade
@@ -4,7 +4,7 @@
     .inner
       .row
         .label 手机：
-        .text @{it.user.phone}
+        .text @{it.phone}
       | <?js it.cars.forEach(function(car,index){ ?>
       .row
         .label 车型：
