--- a/public/jade/layout.jade
+++ b/public/jade/layout.jade
@@ -1,7 +1,7 @@
 - var sitename = "CC美车"
 mixin facade(name)
-  if env == "product"
-    script(src="/dest/pages/#{name}.js?t=#{config.start_time}")
+  //- if env == "product"
+  //-   script(src="/dest/pages/#{name}.js?t=#{config.start_time}")
   script.
     facade({
       entry: "ccmeiche@#{package_version}/pages/#{name}.js"
