--- a/public/jade/layout.jade
+++ b/public/jade/layout.jade
@@ -13,12 +13,12 @@ html
     title= title || sitename
 
     script(src="/neurons/neuron/7.1.3/neuron.js?t=#{config.start_time}")
-    if env !== "product"
-      script(src="/neurons/config.js?t=#{config.start_time}")
-      script.
-          neuron.config({
-            path:"/neurons"
-          });
+    //- if env !== "product"
+    script(src="/neurons/config.js?t=#{config.start_time}")
+    script.
+        neuron.config({
+          path:"/neurons"
+        });
     link(href="/css/app.css?t=#{config.start_time}", rel="stylesheet")
     meta(name="format-detection" content="telephone=no")
     meta(name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, initial-scale=1")
