--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -318,7 +318,6 @@ body
   margin: 0 auto
 
 #home
-  position: fixed
   >.container>.title
     padding-top:10px
     height: 40px
@@ -375,23 +374,14 @@ body
           border-bottom: 1px solid #ccc
           &:last-child
             border-bottom: none
-          .index
-            margin: 5px 0
-            line-height: 38px
-            text-align: center
-            width: 72px
-            float: left
-            border-right: 1px solid #e4e4e5
           .detail
-            text-align: center
+            text-align: left
             height: 48px
-            padding-left: 20px
-            line-height: 48px
+            padding-left: 15px
+            max-width: 180px
+            overflow: ellipsis
             .type,.number
-              height: 18px
-              line-height: 18px
               font-size: 14px
-              display: inline-block
               margin-right: 10px
   .services
     .active
@@ -559,6 +549,7 @@ body
     font-size: 12px
 
 #addcar
+  padding-bottom: 10px
   .h2
     font-size: 18px
     text-align: center
@@ -581,6 +572,7 @@ body
   .button
     margin-top: 15px
 
+
 #preorder
   .h2
     font-size: 18px
@@ -590,6 +582,7 @@ body
     padding: 2px
     background-color: #fff
     color: #b6b6b6
+    overflow: ellipsis
     .inner
       border:2px solid orange
       padding: 14px
