--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -6,8 +6,7 @@ block content
   include menu
 
   .container
-    h1.title 洗车啦
-    .section
+    .section(style="margin-top:7px")
       h2 手机 #{user.phone}
     .section
       .cars
