--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -80,6 +80,12 @@ body
   z-index: 20
   .swipe-inner
     background-image: linear-gradient(215deg,orange,deeporange)
+  .button
+    width: 120px
+  .submit
+    float: left
+  .cancel
+    float: right
 
 .popselect
   position: fixed
@@ -569,6 +575,7 @@ body
       background-position: 0 -120px
   .button
     margin-top: 15px
+    width: 120px
 
 
 #preorder
