--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -6,7 +6,7 @@ block content
   include menu
 
   .container
-    .section(style="margin-top:7px")
+    .section(style="padding-top:7px")
       h2 手机 #{user.phone}
     .section
       .cars
