--- a/public/jade/menu.jade
+++ b/public/jade/menu.jade
@@ -9,7 +9,7 @@
       a(href="/myorders") 我的订单
       i.icon.icon-orders
     li.item
-      a(href="/myinfos") 我的信息
+      a(href="/myinfos") 我的车库
       i.icon.icon-info
     li.item
       a(href="/wechat/recharge?showwxpaytitle=1") 充值
