--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -681,7 +681,7 @@ body
   .h1
     font-size: 20px
     text-align: center
-    margin: 50px auto 10px auto
+    margin: 30px auto 10px auto
   .add
     position: relative
     left: -14px
@@ -691,7 +691,7 @@ body
   .section
     background-color: #fff
     padding: 0 30px
-    margin-bottom: 40px
+    margin-bottom: 25px
     .h2
       color: orange
       text-align: center
@@ -714,6 +714,8 @@ body
       .text
         float: left
         padding-left: 23px
+        width: 150px
+        overflow: hidden
         .title
           line-height: 1
           font-size: 15px
