--- a/public/jade/layout.jade
+++ b/public/jade/layout.jade
@@ -38,6 +38,7 @@ html
         }
         var appConfig = {
             env: "#{env}",
+            service: "#{config.service}",
             qiniu_bucket: "#{config.qiniu_bucket}",
             qiniu_host: "#{config.qiniu_host}"
         }
