--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -596,6 +596,7 @@ body
         .label
           text-align: right
           line-height: 23px
+          min-height: 23px
           width: 60px
           float: left
         .text
@@ -872,7 +873,7 @@ body
       path,ellipse
         fill: white
 
-#recharge
+#recharge,#promos
   .h1
     font-size: 20px
     text-align: center
