更新默认车辆

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1018,7 +1018,7 @@ body.openmenu {
   padding-top: 20px;
 }
 #order .pic {
-  margin: 20px 30px;
+  margin: 0 20px 10px;
   padding: 5px;
 }
 #order .pic img {
