--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -762,7 +762,7 @@ body
   background-color: #fff
   padding-top: 20px
   .pic
-    margin: 20px 30px
+    margin: 0 20px 10px
     padding: 5px
     img
       width: 100%
