0元不走支付逻辑

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -373,6 +373,9 @@ body.openmenu {
 .photo-list .loading .spin {
   margin: 0 auto;
 }
+.finish_photos img {
+  width: 100%;
+}
 .add-photo {
   zoom: 1;
   width: 100%;
