--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -531,6 +531,10 @@ body
     .price
       font-size: 14px
       padding-right: 12px
+    .haspromo
+      float: right
+      margin-right: 7px
+      margin-top: -7px
 
 .autocomplete
   z-index: 9
