--- a/public/css/app.css
+++ b/public/css/app.css
@@ -153,13 +153,14 @@ body.openmenu {
   box-sizing: border-box;
   background-color: #fff;
   border: 1px solid #898989;
-  width: 50%;
-  height: 49px;
+  border-bottom: 0;
   padding: 8px 0;
   text-align: center;
   font-size: 12px;
   color: #b6b6b6;
-  float: left;
+}
+.popselect .choices .item:last-child {
+  border-bottom: 1px solid #898989;
 }
 .popselect .choices .item.active {
   background-color: #c70462;
