--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -111,13 +111,13 @@ body
       box-sizing: border-box
       background-color: #fff
       border: 1px solid #898989
-      width: 50%
-      height: 49px
+      border-bottom: 0
       padding: 8px 0
       text-align: center
       font-size: 12px
       color: grey
-      float: left
+      &:last-child
+        border-bottom: 1px solid #898989
       &.active
         background-color: pink
         color: #fff
