--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -393,9 +393,6 @@ body
               font-size: 14px
               margin-right: 10px
   .services
-    .active
-      color: #fff
-      background-color: pink
     li
       clearfix()
       position: relative
@@ -417,7 +414,7 @@ body
         line-height: 42px
         height: 42px
       .arrow
-        background-image: url("../img/arrow-right.png")
+        background-image: url("../img/arrow.png")
         width: 10px
         height: 18px
         position: absolute
@@ -436,59 +433,81 @@ body
         .count
           height: 19px
   // 优惠券
-  .section.promo
-    height: 35px
-    line-height: 35px
-    padding: 5px 15px
-    background-color: #ccc
-    margin-bottom:1px
-    .count
-      float: right
-      color: pink
-      .num
-        position: relative
-        width: 50px
-        height: 25px
-        border: 1px solid pink
-        top: 3px
-        display: inline-block
-        margin-right: 5px
-        background-color: #fff
-        background-color: #fff
-        .text
-          text-align: center
-          position: relative
-          top: -4px
-          left: 0px
-        select
-          border: 0
-          position: absolute
-          top: 0
-          left: 0
-          width: 100%
-          height: 100%
-          opacity: 0
-  // 积分
-  .section.credit
-    @extend #home .section.promo
-    .use
-      float: right
-      width: 100px
-      .icon
-        background-image: url("../img/checkbox.png")
-        width: 26px
-        height: 27px
-        display: block
-        float: right
-        margin-right: 8px
-        position: relative
-        top: 3px
+  .section.coupon
+    clearfix()
+    // 积分
+    .credit
+      height: 46px
+      float: left
+      width: 50%
+      background-color: #fff
       .text
+        padding: 5px 0 5px 15px
+        font-size: 12px
+        color: #b4b4b4
+        float: left
+      .use
+        float: right
+        margin-top: 7px
+        .icon
+          background-image: url("../img/checkbox.png")
+          width: 26px
+          height: 27px
+          display: block
+          float: right
+          margin-right: 8px
+          position: relative
+          top: 3px
+        &.active
+          .icon
+            background-position: 0 -27px
+    .promo
+      height: 46px
+      line-height: 35px
+      padding: 5px 5px 5px 15px
+      margin-bottom:1px
+      float: right
+      width: 50%
+      background-color: #c70462
+      box-sizing: border-box
+      .text
+        font-size: 12px
+        line-height: 1.5
+        float: left
+      .count
         float: right
         color: pink
-      &.active
-        .icon
-          background-position: 0 -27px
+        .num
+          position: relative
+          width: 50px
+          height: 25px
+          border: 1px solid pink
+          top: 3px
+          display: inline-block
+          margin-right: 5px
+          background-color: #fff
+          background-color: #fff
+          .text
+            text-align: center
+            position: relative
+            top: 3px
+            left: 19px
+          select
+            border: 0
+            position: absolute
+            top: 0
+            left: 0
+            width: 100%
+            height: 100%
+            opacity: 0
+      &.disabled
+        background-color: #dbdcdc
+        color: #b4b4b4
+        .num
+          border: 1px solid #b6b6b6
+          color: #b6b6b6
+
+
   // 支付
   .payment
     margin-top: 8px
