--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -734,11 +734,15 @@ body
       padding: 4px
       &:first-child
         border-top: 1px solid orange
+      .addaddress-panel
+        margin-top: 4px
       .label
         float: left
         border-right: 1px solid light-grey
         width: 74px
         text-align: center
+      .wrap
+        clearfix()
       .text
         float: left
         padding-left: 23px
