--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -36,6 +36,7 @@ block content
             .title #{service.title}
             .desc #{service.describe}
           .arrow
+            .icon
           .price ￥#{service.price}
 
     .section.coupon
