--- a/public/jade/login.jade
+++ b/public/jade/login.jade
@@ -15,4 +15,5 @@ block content
   script.
     var access_token = '#{access_token}';
     var openid = '#{openid}';
+    var agreement = "!{agreement}";
   +facade("login")
