--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -606,6 +606,26 @@ body
     margin-top: 15px
     width: 120px
 
+#agreement
+  .h2
+    font-size: 18px
+    text-align: center
+    padding: 15px 0
+    color: #fff
+  .content
+    background-color: #fff
+    color: grey
+    padding: 5px
+    height: 300px
+    font-size: 28px
+    p
+      text-indent: 28px
+      font-size: 14px
+  .row
+    padding: 20px
+    .button
+      margin: 0 auto
+      float: none
 
 #preorder
   .h2
@@ -878,6 +898,8 @@ body
     font-size: 18px
     padding: 12px 0
     text-align: center
+
+
 
 .breakages
   clearfix()
