优惠券购买

--- a/public/jade/recharge.jade
+++ b/public/jade/recharge.jade
@@ -3,7 +3,7 @@ block content
   h1.h1 充值
   ul.choices
     for choice in choices
-      li.row(data-price="#{choice.price}")
+      li.row(data-id="#{choice._id}")
         .price #{choice.price}cc
         .promo #{choice.title}
   .button 提交
